--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.26.0",
     "Menu": "link:@mui/icons-material/Menu",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
     "prop-types": "^15.8.1",
