--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.14.1",
     "styled-components": "^6.0.1"
