--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.26.0",
     "Menu": "link:@mui/icons-material/Menu",
     "axios": "^1.4.0",
+    "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
