--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-loading": "^2.0.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
-    "styled-components": "^6.0.1"
+    "styled-components": "^6.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
